--- a/Space Travel/index.html
+++ b/Space Travel/index.html
@@ -11,8 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
       rel="stylesheet">
       
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/componets.css">
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/basics.css">
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/destination.css">
+  <link rel="stylesheet" href="css/crew.css">
+  <link rel="stylesheet" href="css/technology.css">
   <title>Space tourism website</title>
 </head>
 <body class="home">
