--- a/Space Travel/crew.html
+++ b/Space Travel/crew.html
@@ -11,8 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
         rel="stylesheet">
     
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/componets.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/basics.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/destination.css">
+    <link rel="stylesheet" href="css/crew.css">
+    <link rel="stylesheet" href="css/technology.css">
     <title>Space tourism website</title>
 </head>
 <body class="crew">
@@ -34,13 +39,6 @@
         <h1 class="numbered-title"><span aria-hidden="true">02</span>Meet your crew</h1>
         <img id="image-crew" src="./assets/crew/image-douglas-hurley.png" alt="Commander Douglas Hurley">
 
-        <div class="dot-indicators flex">
-            <button id="commander-dot"aria-selected="true" onClick={commander()}><span class="sr-only">The commander</span></button>
-            <button id="specialist-dot"aria-selected="false"  onClick={specialist()}><span class="sr-only">The mission specialist</span></button>
-            <button id="pilot-dot"aria-selected="false"onClick={pilot()}><span class="sr-only">The pilot</span></button>
-            <button id="engineer-dot"aria-selected="false" onClick={engineer()}><span class="sr-only">The crew engineer</span></button>
-        </div>
-
         <article class="crew-info flex">
             <h3 id="crew-role" class="uppercase ff-serif fs-500 text-accent">commander</h3>
             <h2 id="crew-name" class="uppercase ff-serif fs-600">douglas hurley</h2>
@@ -48,6 +46,13 @@
                 and former NASA astronaut. He launched into space for the third time as 
                 commander of Crew Dragon Demo-2.</p>
         </article>  
+
+        <div class="dot-indicators flex">
+            <button id="commander-dot"aria-selected="true"><span class="sr-only">The commander</span></button>
+            <button id="specialist-dot"aria-selected="false"><span class="sr-only">The mission specialist</span></button>
+            <button id="pilot-dot"aria-selected="false"><span class="sr-only">The pilot</span></button>
+            <button id="engineer-dot"aria-selected="false"><span class="sr-only">The crew engineer</span></button>
+        </div>
 
     </main>
     
