--- a/Space Travel/destination.html
+++ b/Space Travel/destination.html
@@ -39,16 +39,16 @@
         <h1 class="numbered-title"><span aria-hidden="true">01</span>Pick your destination</h1>
         <img class="image-destination" src="./assets/destination/image-moon.png" alt="the moon">
         
-        <div class="tab-list underline-indicators flex">
-            <button aria-selected="true" class="tabs  uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="0">Moon</button>
-            <button aria-selected="false" class="tabs  uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="2">Europa</button>
-            <button aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="1">Mars</button>
-            <button aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="3">Titan</button>
-            <button aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="4">Jupiter</button>
-            <button aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="5">Sun</button>
+        <div class="tab-list underline-indicators flex" role="tablist">
+            <button role="tab" aria-selected="true" class="tabs  uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="0">Moon</button>
+            <button role="tab" aria-selected="false" class="tabs  uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="2">Europa</button>
+            <button role="tab" aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="1">Mars</button>
+            <button role="tab" aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="3">Titan</button>
+            <button role="tab" aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="4">Jupiter</button>
+            <button role="tab" aria-selected="false" class="tabs uppercase ff-sans-cond text-accent bg-dark letter-spacing-2" data-id="5">Sun</button>
         </div>
 
-        <article class="destination-info">
+        <article class="destination-info" >
             <h2 class="destination-place uppercase ff-serif fs-700">moon</h2>
             <p class="destination-desc text-accent ff-sans-normal bg-dark fs-400">See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
                 regain perspective and come back refreshed. While you’re there, take in some history 
