--- a/Space Travel/crew.html
+++ b/Space Travel/crew.html
@@ -37,26 +37,24 @@
 </header>
     <main class="grid-container grid-container--crew">
         <h1 class="numbered-title"><span aria-hidden="true">02</span>Meet your crew</h1>
-        <img id="image-crew" src="./assets/crew/image-douglas-hurley.png" alt="Commander Douglas Hurley">
+        <img class="crew__image" src="./assets/crew/image-douglas-hurley.png" alt="Commander Douglas Hurley">
 
         <article class="crew-info flex">
-            <h3 id="crew-role" class="uppercase ff-serif fs-500 text-accent">commander</h3>
-            <h2 id="crew-name" class="uppercase ff-serif fs-600">douglas hurley</h2>
-            <p id="crew-bio" class="text-accent ff-sans-normal fs-400">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
+            <h3 class="crew__role uppercase ff-serif fs-500 text-accent">commander</h3>
+            <h2 class="crew__name uppercase ff-serif fs-600">douglas hurley</h2>
+            <p class="crew__bio text-accent ff-sans-normal fs-400">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
                 and former NASA astronaut. He launched into space for the third time as 
                 commander of Crew Dragon Demo-2.</p>
         </article>  
 
         <div class="dot-indicators flex">
-            <button id="commander-dot"aria-selected="true"><span class="sr-only">The commander</span></button>
-            <button id="specialist-dot"aria-selected="false"><span class="sr-only">The mission specialist</span></button>
-            <button id="pilot-dot"aria-selected="false"><span class="sr-only">The pilot</span></button>
-            <button id="engineer-dot"aria-selected="false"><span class="sr-only">The crew engineer</span></button>
+            <button aria-selected="true" class="dot" data-id="0"><span class="sr-only" >The commander</span></button>
+            <button aria-selected="false" class="dot" data-id="1"><span class="sr-only" >The mission specialist</span></button>
+            <button aria-selected="false" class="dot" data-id="2"><span class="sr-only" >The pilot</span></button>
+            <button aria-selected="false" class="dot" data-id="3"><span class="sr-only" >The crew engineer</span></button>
         </div>
 
     </main>
-    
-
 
     <script src="./index.js"></script>
     <script src="./tabs.js"></script>
